# DPG

./: .gitignore  LICENSE  README.md  adult_mini_transformed.csv  config.yaml  dpg.py  dpg_custom.py  dpg_standard.py  example.py  example_iris.py  example_standard.py  experiments_categorica_values.py  experiments_poac.py  pyproject.toml  requirements.txt  run_dpg_standard.py  simple_test.py  to_work_read_metrics.ipynb  to_work_with.py  to_work_with_cycle.py  to_work_with_new.py  try.ipynb  wrap_constraints.py
datasets/: adult_mini.csv  carambola.csv  custom.csv
dpg/: __init__.py  categorical_ensemble.py  core.py  dpg_multi_ensembles.py  explainer.py  plots.py  sklearn_custom_dpg.py  sklearn_dpg.py  sklearn_exp.py  sklearn_standard_dpg.py  test_sklearn.py  test_sklearn_work.py  utils.py  visualizer.py
dpg_image_examples/: custom_l5_pv0.001_t2_stats.txt  iris_l20_pv0.001_t2_dpg_metrics.txt  iris_l20_pv0.001_t2_node_metrics.csv
examples/: custom_l2_pv0.0_t2_dpg_metrics.txt  custom_l2_pv0.0_t2_node_metrics.csv  custom_l2_pv0.0_t2_stats.txt  custom_l5_pv0.001_t2_dpg_metrics.txt  custom_l5_pv0.001_t2_node_metrics.csv  custom_l5_pv0.001_t2_stats.txt  dataset_l2_pv0.0_t2_dpg_metrics.txt  dataset_l2_pv0.0_t2_node_metrics.csv  example_dpg_notebook.ipynb  from_raw_dpg_explanation.py  iris_dpg_notebook.ipynb  iris_l20_pv0.001_t2_dpg_metrics.txt  iris_l20_pv0.001_t2_node_metrics.csv  iris_l20_pv0.001_t2_stats.txt  iris_l2_pv0.0_t2_dpg_metrics.txt  iris_l5_pv0.001_t2_dpg_metrics.txt  iris_l5_pv0.001_t2_node_metrics.csv  iris_l5_pv0.001_t2_stats.txt  simple_dpg_explanation.py  (+1 more)
(+9 files in other folders)
