[tool.poetry]
name = "dpg"
version = "0.1.0"
description = "A Python library for extracting and analyzing Decision Predicate Graphs from ensemble models."
authors = ["Sylvio Barbon Junior <sylvio.barbonjunior@units.it>", "Leonardo Arrighi <leonardo.arrighi@phd.units.it>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LeonardoArrighi/DPG"
repository = "https://github.com/LeonardoArrighi/DPG"
keywords = ["decision graph", "ensemble learning", "explainable ai"]
packages = [
    { include = "dpg" },
    { include = "metrics" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.10"

contourpy = "1.2.1"
cycler = "0.12.1"
fonttools = "4.53.1"
graphviz = "0.20.3"
joblib = "1.4.2"
kiwisolver = "1.4.5"
matplotlib = ">= 3.9.1"
networkx = "3.3"
numpy = ">= 2.0.0"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.4.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
scikit-learn = "1.5.1"
scipy = ">= 1.14.0"
six = "1.16.0"
threadpoolctl = "3.5.0"
tqdm = "4.67.1"
tzdata = "2024.1"
pyyaml = "^6.0.2" 

[tool.poetry.extras]
dev = ["pytest", "ipython", "jupyter"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dpg = "scripts.run_dpg_standard:main"
